src/test/resources/invalid_tests/MissingConvolutionArgument2.cnna
architecture MissingConvolutionArgument2{
    def input in
    def output out
    
    in ->
    convolution(no_bias=true)
    output {
        fullyConnected()
        activation.softmax()
    } -> out
}